--- a/package.json
+++ b/package.json
@@ -2,25 +2,52 @@
   "name": "visionary-paragon-website",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:client-and-server": "ng build -c staging && ng run automatik-website:server:staging",
+    "build:client-and-server-production": "ng build --prod && ng run automatik-website:server:production",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
+    "build:ssr-production": "npm run build:client-and-server-production && npm run webpack:server",
+    "serve:ssr": "node dist/server",
+    "forever:ssr": "forever start dist/server",
+    "sendit": "npm run build:ssr && npm run serve:ssr",
+    "sendit-forever": "npm run build:ssr-production && npm run forever:ssr",
+    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
+    "build:client-and-server-bundles": "ng build --prod && ng run visionary-paragon-website:server:production"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.0.0",
+    "@angular/cdk": "^8.0.0",
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
     "@angular/forms": "~8.0.0",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^8.0.0",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
+    "@angular/platform-server": "^8.0.0",
     "@angular/router": "~8.0.0",
+    "@nguniversal/common": "^7.1.1",
+    "@nguniversal/express-engine": "^7.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
+    "classlist.js": "^1.1.20150312",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "express-session": "^1.16.1",
+    "mongoose": "^5.5.14",
+    "nodemailer": "^6.2.1",
     "rxjs": "~6.4.0",
+    "smoothscroll-polyfill": "^0.4.4",
     "tslib": "^1.9.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -40,8 +67,10 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
+    "ts-loader": "^5.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.4.3",
+    "webpack-cli": "^3.1.0"
   }
 }
